# retail-ai

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: query.py  upload.py
app/core/: config.py
app/rag/: agent.py  embeddings.py  memory.py  retriever.py  vector_store.py
app/schemas/: response.py
app/services/: ingestion_service.py  query_service.py
app/utils/: chunking.py  loaders.py
ui/: streamlit_app.py
